--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -20,6 +20,7 @@ main section.categories-show {
     }
     article {
       .soldout {
+        justify-content: center;
         min-width: 110px;
         background: rgba(224, 14, 14, 0.8);
         border: 1px solid rgba(224, 14, 14, 0.8);
