--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,12 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<section class="admin-products-index">
+
+  <header class="page-header">
+    <h1>Admin Dashboard</h1>
+  </header>
+
+  <div>
+    <h3>Products: <em><a href='/admin/products'><%= @products.count %></a></em></h3>
+    <h3>Categories: <em><%= @categories.count %></em></h3>
+  </div>
+
+</section>
