--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -43,6 +43,33 @@
         </li> %>
       </ul>
       <ul class="navbar-nav">
+
+      <% if current_user %>
+
+        <li class="nav-item end-0">
+
+          <li class="navbar-text current-user">
+            Signed in as <%= current_user.name %>
+          </li>
+          <li class="nav-item end-0">
+            <%= link_to "Logout", '/logout', class: "nav-link" %>
+          </li>
+        </li>
+
+
+        <% else %>
+          <li class="nav-item end-0">
+            <li class="nav-item end-0">
+              <%= link_to 'Login', '/login', class: "nav-link" %>
+            </li>
+            <li class="nav-item end-0">
+              <%= link_to 'Signup', '/signup', class: "nav-link" %>
+            </li>
+            
+          </li>
+      <% end %>
+
+
        
         <li class="nav-item dropdown">
           <a
@@ -67,6 +94,7 @@
           <%= link_to cart_path, class: "nav-link " do %> <%= fa_icon "shopping-cart" %>
           My Cart (<%= cart.size %>) <% end %>
         </li>
+       
       </ul>
     </div>
   </div>
