--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,7 +1,7 @@
 <section class="admin-products-index">
 
   <header class="page-header">
-    <h1>Admin Dashboard</h1>
+    <h1>Admin &raquo; Dashboard</h1>
   </header>
 
   <div>
