--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -49,7 +49,7 @@
         <li class="nav-item end-0">
 
           <li class="navbar-text current-user">
-            Signed in as <%= current_user.name %>
+            Signed in as <%= current_user.first_name %> <%= current_user.last_name %>
           </li>
           <li class="nav-item end-0">
             <%= link_to "Logout", '/logout', class: "nav-link" %>
